ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/grayc-aggressive/gcc/set-1/fuzzer-file-57023.log
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing-copy1/fuzzer-24-50s-set-1/segment_3/fuzzer-file-57023-2022-02-09-04:10:07.c: In function ‘main’:
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing-copy1/fuzzer-24-50s-set-1/segment_3/fuzzer-file-57023-2022-02-09-04:10:07.c:18:1: error: non-trivial conversion in unary operation
   18 | main ()
      | ^~~~
unsigned long
struct S *
_3 = ~_10;
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing-copy1/fuzzer-24-50s-set-1/segment_3/fuzzer-file-57023-2022-02-09-04:10:07.c:18:1: error: non-trivial conversion in unary operation
unsigned long
struct S *
_24 = ~_23;
during GIMPLE pass: vect
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing-copy1/fuzzer-24-50s-set-1/segment_3/fuzzer-file-57023-2022-02-09-04:10:07.c:18:1: internal compiler error: verify_gimple failed
0xf6a8aa verify_gimple_in_cfg(function*, bool)
	.././../gcc-source/gcc/tree-cfg.cc:5561
0xe2903f execute_function_todo
	.././../gcc-source/gcc/passes.cc:2084
0xe29a03 do_per_function
	.././../gcc-source/gcc/passes.cc:1687
0xe29a03 execute_todo
	.././../gcc-source/gcc/passes.cc:2138
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
